@@ -3,6 +3,7 @@ Version 0.9.0beta1 - 2007-XX-YY
    * The tag editor now accepts free-text tag names.
    * Load 'DJ-mixed by' AR data to %djmixer% tag.
    * Delay the webservice client to do max. 1 request per second.
+   * Sort files in clusters by disc number, track number and file name. (#2547)
  * Bug Fixes:
    * Save XSOP frame to ID3v2.3 tags. (#2484)
    * Don't write string terminators to ID3 frames.
